# Camera_Calibration

./: README.md  c++笔记.txt  镜头矫正笔记.txt
c++_code/: CMakeLists.txt  cameraCalibrationWithUndistortion.cpp
python_code/: calc_undistort.py  camera.py  undistort_effect.py
